kubernetes/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "api.albuvideo.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: albuvideo-api
                port:
                  number: 80
